--- a/Lessons/M2_ACF_PACF.Rmd
+++ b/Lessons/M2_ACF_PACF.Rmd
@@ -110,7 +110,7 @@ Suppose you want to plot HP1 and HP2 on the same graph.
 plot(inflow_data[,"HP1"],type="l",col="blue",ylab="Inflow [m3/s]") 
 lines(inflow_data[,"HP2"],col="red") #Note if you use plot you generate a new graph 
                     #no need to specify type in lines() function
-title(main="Infow Series for HP1 and HP2")
+title(main="Inflow Series for HP1 and HP2")
 
 #If you want to add legend
 legend("topright",legend=c("HP1","HP2"), lty=c("solid","solid"),col=c("blue","red"))
@@ -141,6 +141,7 @@ ggplot(inflow_data, aes(x=my_date, y=HP1)) +
 ggplot(inflow_data, aes(x=my_date, y=Inflow)) +
             geom_line(aes(y=HP1,col="HP1")) +
             geom_line(aes(y=HP2,col="HP2")) +
+            geom_line(aes(y=HP2,col="HP2"))+
             xlab("Time") +
             labs(color="Reservoir")
 ```
@@ -151,8 +152,13 @@ Many of the functions we will use require a time series object. You can transfor
 ```{r}
 ts_inflow_data <- ts(inflow_data[,2:(2+nhydro-1)]) #note that we are only transforming columns with inflow data, not the date columns
 ts_inflow_data
-#plot(ts_inflow_data[,1])
+plot(ts_inflow_data[,1])
 ```
 
 Note that ts_inflow_data has information on start, end and frequency. We will discuss frequency in future lectures, for now let's just keep the default value for frequency which is 1.
+
+```{r}
+pacf(ts_inflow_data[,1])
+```
+
 
