--- a/Lessons/M6_SeasonalARIMA.Rmd
+++ b/Lessons/M6_SeasonalARIMA.Rmd
@@ -155,9 +155,12 @@ ns_diff <- nsdiffs(ts_electricity_price[,"Residential"])
 cat("Number of seasonal differencing needed: ",ns_diff)
 
 #Lets difference the series once at lag 12 to remove the seasonal trend.
-residential_price_seas_diff <- diff(ts_electricity_price[,"Residential"],lag=12, differences=1)
-residential_price_trend_diff <- diff(ts_electricity_price[,"Residential"],lag =1, differences=1) #diff done on orig series
-residential_price_both_diff <- diff(residential_price_trend_diff,lag =12, differences=1)
+residential_price_seas_diff <- diff(ts_electricity_price[,"Residential"],lag=12, differences=1) #this is just seasonal
+
+
+
+residential_price_trend_diff <- diff(ts_electricity_price[,"Residential"],lag =1, differences=1) #this is trend diff
+residential_price_both_diff <- diff(residential_price_trend_diff,lag =12, differences=1) #and this is seasonal on the trend diff
 
 #Check autocorrelation plots for differenced series
 #Comparing ACFs
