--- a/Lessons/M10_AdvancedForecastingModels.Rmd
+++ b/Lessons/M10_AdvancedForecastingModels.Rmd
@@ -182,7 +182,7 @@ Recall from `ts()` function that frequency is the number of observation per seas
 
 ```{r message=FALSE, warning=FALSE}
 ts_act_power_hourly <- msts(act_power_hourly$hourly_mean_active_power, 
-                            seasonal.periods =c(24,168,8766),
+                            seasonal.periods =c(24,168,8766), #
                             start=c(2006,12,16))
 
 ts_act_power_daily <- msts(act_power_daily$daily_mean_active_power, 
@@ -285,7 +285,7 @@ ARIMA_Four_fit <- auto.arima(ts_act_power_daily_train,
 #also need to specify h for fourier terms
 ARIMA_Four_for <- forecast(ARIMA_Four_fit,
                            xreg=fourier(ts_act_power_daily_train,
-                                        K=c(2,12),
+                                        K=c(2,12), #two different seasonal means models over 12 months)
                                         h=365),
                            h=365
                            ) 
